Bug 363999 - wrong scope in method argument list
Summary: wrong scope in method argument list
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Language support (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: 1.7.3
Assignee: Sven Brauch
URL:
Keywords:
: 348026 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-05 19:31 UTC by Sven Brauch
Modified: 2016-06-13 07:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2016-06-05 19:31:23 UTC
see e.g.
class Foo:
  a = 3
  def func(x=a): pass


Reproducible: Always
Comment 1 Sven Brauch 2016-06-13 06:59:00 UTC
Git commit 50ee4639f4335c1013068ae68fe5d33b4a4d25fb by Sven Brauch.
Committed on 13/06/2016 at 06:58.
Pushed by brauch into branch '5.0'.

fix class scope not being visible in method parameter lists

M  +1    -1    duchain/helpers.cpp
M  +6    -0    duchain/tests/pyduchaintest.cpp

http://commits.kde.org/kdev-python/50ee4639f4335c1013068ae68fe5d33b4a4d25fb
Comment 2 Sven Brauch 2016-06-13 07:06:16 UTC
*** Bug 348026 has been marked as a duplicate of this bug. ***