fix class scope not being visible in method parameter lists

BUG:363999